<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="ru.netology.nmedia.activity.FeedFragment"
        android:label="@string/nmedia"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/action_feedFragment_to_newPostFragment"
            app:destination="@id/newPostFragment" />
        <action
            android:id="@+id/action_feedFragment_to_photoFragment"
            app:destination="@id/photoFragment" />
    </fragment>
    <fragment
        android:id="@+id/photoFragment"
        android:name="ru.netology.nmedia.activity.PhotoFragment"
        android:label="fragment_photo"
        tools:layout="@layout/fragment_photo" />
    <fragment
        android:id="@+id/newPostFragment"
        android:name="ru.netology.nmedia.activity.NewPostFragment"
        android:label="@string/new_post"
        tools:layout="@layout/fragment_new_post" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="ru.netology.nmedia.activity.LoginFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/registrationFragment"
        android:name="ru.netology.nmedia.activity.RegistrationFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_registration" />

    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment" />
    <action
        android:id="@+id/action_global_registrationFragment"
        app:destination="@id/registrationFragment" />
</navigation>
